# rymupdater

./: .gitignore  README.md  pyproject.toml  requirements.txt
rymupdater/: domain.py  helpers.py  scraping.py  services.py  tagging.py
rymupdater/presentation/: app.py  cli.py  gui.py
src/application/: domain.py  helpers.py  services.py
src/data/: localDao.py  webDao.py
src/presentation/: app.py  cli.py  gui.py  gui_helpers.py
